--- a/runner/package.json
+++ b/runner/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "AD",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
