--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1"
   }
